Fixed label spacing

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -71,6 +71,7 @@ select {
 
 label {
     display: block;
+    margin-top:1em;
 }
 
 label input:not([type=radio]){
